--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "classnames": "2.2.6",
+    "electron-packager-dummy-wine": "^1.0.2",
     "history": "4.9.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -56,8 +57,8 @@
     "babel-loader": "8.0.4",
     "compression-webpack-plugin": "2.0.0",
     "css-loader": "2.1.0",
-    "electron-packager": "14.0.6",
     "electron": "6.0.10",
+    "electron-packager": "14.0.6",
     "eslint": "6.4.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-config-react": "1.1.7",
